# wiz-eyedropper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
meta/: Info.plist  app.manifest  entitlements.plist
src/: app.rc  main.cpp
